# booklog

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  fly.toml
.github/workflows/: deploy.yml
migrations/: 0001_auth.sql  0002_books.sql  0003_analytics.sql
scripts/: bootstrap-db.sh  import-storygraph-genres.py  import-storygraph.py
src/: main.rs
src/application/: auth.rs  mod.rs  rate_limit.rs  server.rs  state.rs
src/application/routes/: mod.rs  support.rs
src/application/routes/api/: images.rs  macros.rs  mod.rs
src/application/routes/api/analytics/: stats.rs
src/application/routes/api/auth/: tokens.rs  webauthn.rs
src/application/routes/api/books/: authors.rs  books.rs  genres.rs  mod.rs  readings.rs  scan.rs  user_books.rs
src/application/routes/app/: add.rs  admin.rs  auth.rs  authors.rs  books.rs  data.rs  genres.rs  home.rs  mod.rs  readings.rs  stats.rs  timeline.rs  webauthn.rs
src/application/services/: books.rs  mod.rs  readings.rs  stats.rs  timeline_refresh.rs
src/domain/: cover_suggestions.rs  formatting.rs  ids.rs  listing.rs  mod.rs  repositories.rs
src/domain/analytics/: mod.rs  stats.rs  timeline.rs
src/domain/auth/: sessions.rs  users.rs
src/domain/books/: authors.rs  books.rs  genres.rs  mod.rs  quick_reviews.rs  readings.rs  user_books.rs
src/infrastructure/: ai.rs  auth.rs  backup.rs  cover_fetch.rs  mod.rs
src/infrastructure/client/: authors.rs  backup.rs  books.rs  genres.rs  mod.rs  readings.rs  timeline.rs  tokens.rs  user_books.rs
src/infrastructure/repositories/: cover_suggestions.rs  images.rs  mod.rs  pagination.rs
src/infrastructure/repositories/analytics/: ai_usage.rs  stats.rs  timeline_events.rs
src/infrastructure/repositories/auth/: sessions.rs  users.rs
src/infrastructure/repositories/books/: authors.rs  book_authors.rs  books.rs  genres.rs  mod.rs  readings.rs  user_books.rs
src/presentation/cli/: authors.rs  books.rs  genres.rs  macros.rs  mod.rs  readings.rs  timeline.rs  tokens.rs  user_books.rs
src/presentation/web/: templates.rs
src/presentation/web/views/: authors.rs  books.rs  genres.rs  mod.rs  readings.rs  timeline.rs
static/css/: input.css
static/js/: webauthn.js
static/js/components/: bar-chart.js  donut-chart.js  searchable-select.js
templates/: base.html
templates/pages/: add.html  admin.html  author.html  book.html  cli_callback.html  data.html  edit_author.html  edit_book.html  edit_genre.html  edit_reading.html  finish_reading.html  genre.html  home.html  login.html  reading.html  register.html  start_book.html  start_reading.html  stats.html  timeline.html
templates/partials/: detail_cards.html  icons.html  image_section.html  nav.html  stats_content.html  tab_bar.html  timeline_month.html
templates/partials/admin/: data.html  passkeys.html  tokens.html
templates/partials/forms/: scan_result_form.html
templates/partials/lists/: author_list.html  book_list.html  genre_list.html  reading_list.html  table.html  user_book_list.html
tests/cli/: authors_cli.rs  backup_cli.rs  books_cli.rs  genres_cli.rs  helpers.rs  main.rs  readings_cli.rs  test_macros.rs  timeline_cli.rs  tokens_cli.rs  user_books_cli.rs
tests/e2e/: author_tests.rs  book_tests.rs  data_tests.rs  delete_tests.rs  detail_tests.rs  edit_tests.rs  image_tests.rs  main.rs  navigation_tests.rs  reading_tests.rs  timeline_tests.rs
tests/e2e/helpers/: auth.rs  forms.rs
tests/server/: auth_api.rs  authors_api.rs  backup.rs  books_api.rs  datastar.rs  extraction_api.rs  form_submissions.rs  genres_api.rs  helpers.rs  images_api.rs  main.rs  pages.rs  pagination.rs  readings_api.rs  stats_api.rs  timeline.rs  user_books_api.rs
(+3 files in other folders)
