[package]
name = "booklog"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", default-features = false }
async-trait = "0.1"
axum = { version = "0.8", features = ["form", "http1", "json", "query", "tokio"], default-features = false }
askama = { version = "0.15", features = ["derive", "std"], default-features = false }
base64 = { version = "0.22", default-features = false }
chrono = { version = "0.4", features = ["serde"], default-features = false }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
rand = "0.8"
sha2 = { version = "0.10", default-features = false }
sqlx = { version = "0.7", default-features = false, features = ["chrono", "macros", "migrate", "runtime-tokio", "sqlite"] }
thiserror = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "signal"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter", "fmt", "json"], default-features = false }
tower = "0.5"
tower-cookies = "0.11"
tower-http = { version = "0.6", features = ["compression-gzip", "limit", "set-header", "trace"] }
url = { version = "2", default-features = false }
uuid = { version = "1", default-features = false, features = ["v4"] }
webauthn-rs = { version = "0.5", default-features = false }

[features]
e2e = []

[dev-dependencies]
portpicker = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["cookies"] }
tempfile = { version = "3.25", default-features = false }
once_cell = { version = "1.19", default-features = false }
wiremock = "0.6"
paste = "1.0.15"
thirtyfour = { version = "0.36", default-features = false, features = ["reqwest"] }

[[test]]
name = "cli"
path = "tests/cli/main.rs"
harness = true

[profile.release]
lto = "thin"
strip = true

[profile.test]
# Run CLI tests serially to share single server instance
opt-level = 0

[[test]]
name = "server"
path = "tests/server/main.rs"
harness = true

[[test]]
name = "e2e"
path = "tests/e2e/main.rs"
harness = true
required-features = ["e2e"]

[lints.clippy]
# Enable pedantic lints with lower priority so individual allows take precedence
pedantic = { level = "warn", priority = -1 }

# Pedantic lints to disable (too noisy or not applicable)
missing_errors_doc = "allow"       # Would require extensive doc changes
missing_panics_doc = "allow"       # Would require extensive doc changes
module_name_repetitions = "allow"  # Common pattern in domain types (e.g., RoasterId in roasters)
must_use_candidate = "allow"       # Too aggressive for this codebase
return_self_not_must_use = "allow" # Builder methods returning Self are common
needless_pass_by_value = "allow"   # Generic T: ToString pattern and consumed value types
cast_possible_truncation = "allow" # Pagination values won't exceed u32 in practice
cast_sign_loss = "allow"           # Database counts are non-negative

# Cherry-picked restriction lints (production safety)
dbg_macro = "deny"                # Prevent debug macros in production
todo = "warn"                     # Flag TODOs for attention
unwrap_used = "warn"              # Flag unwrap() for review; allow where justified
expect_used = "warn"              # Flag expect() for review; allow where justified
